--- a/demo/index.html
+++ b/demo/index.html
@@ -11,6 +11,11 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
     <link rel="import" href="../../iron-flex-layout/classes/iron-flex-layout.html">
     <link rel="import" href="../dude-popup.html">
     <link rel="import" href="demo-wrapper.html">
+    <style>
+        body {
+            background: #222222;
+        }
+    </style>
 </head>
 <body class="fullbleed" unresolved>
     <demo-wrapper></demo-wrapper>
