--- a/dude-popup.html
+++ b/dude-popup.html
@@ -4,7 +4,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 <link rel="import" href="../polymer/polymer.html">
 
 <!--
-`dude-popup` is a Polymer element boilerplate for dude library.
+`dude-popup` is a Polymer element to create a popup which can be canceled by pressing escape.
 
 @group dude Elements
 @element dude-popup
