--- a/dude-popup.html
+++ b/dude-popup.html
@@ -12,24 +12,20 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 -->
 <dom-module id="dude-popup">
     <style>
+        #popup {
+            z-index: 9999;
+            display: block;
+            position: absolute;
+        }
     </style>
     <template>
-
+        <div id="popup" hidden>
+            <content></content>
+        </div>
     </template>
     <script>
         Polymer({
             is: "dude-popup",
-
-            ready: function () {
-                this._popupElement = document.createElement("div");
-                this._popupElement.id = "popup";
-                this._popupElement.style.zIndex = 9999;
-                this._popupElement.style.display = "block";
-                this._popupElement.style.position = "absolute";
-                this._popupElement.setAttribute("hidden", "");
-                this._popupElement.appendChild(Polymer.dom(this).querySelector("*"));
-                document.body.appendChild(this._popupElement);
-            },
 
             open: function (x, y) {
                 if (this.isOpened()) {
@@ -38,32 +34,32 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                     }
                     return;
                 }
-                this._popupElement.removeAttribute("hidden");
-                var rect = this._popupElement.getBoundingClientRect();
+                this.$.popup.removeAttribute("hidden");
+                var rect = this.$.popup.getBoundingClientRect();
                 var width = rect.right - rect.left;
                 var height = rect.bottom - rect.top;
                 if (x + width > window.innerWidth) {
-                    this._popupElement.style.left = x - width + "px";
+                    this.$.popup.style.left = x - width + "px";
                 } else {
-                    this._popupElement.style.left = x + "px";
+                    this.$.popup.style.left = x + "px";
                 }
                 if (y + height > window.innerHeight) {
-                    this._popupElement.style.top = y - height + "px";
+                    this.$.popup.style.top = y - height + "px";
                 } else {
-                    this._popupElement.style.top = y + "px";
+                    this.$.popup.style.top = y + "px";
                 }
             },
 
             close: function () {
-                this._popupElement.setAttribute("hidden", "");
+                this.$.popup.setAttribute("hidden", "");
             },
 
             isOpened: function () {
-                return !this._popupElement.hasAttribute("hidden");
+                return !this.$.popup.hasAttribute("hidden");
             },
 
             _outOfRect: function (x, y) {
-                var rect = this._popupElement.getBoundingClientRect();
+                var rect = this.$.popup.getBoundingClientRect();
                 return x < rect.left || x > rect.right || y < rect.top || y > rect.bottom;
             }
         });
